--- a/webapp-bootstrap/index.html
+++ b/webapp-bootstrap/index.html
@@ -29,6 +29,7 @@
 
 
         <button id="connectWalletBtn" class="btn btn-info mt-2">Connect Wallet</button>
+        <button id="disconnectWalletBtn" class="btn btn-info mt-2">Disconnect Wallet</button>
         <button id="reinvestBtn" class="btn btn-primary mt-2">Reinvest</button>
         <button id="depositBtn" class="btn btn-success mt-2">Deposit Assets</button>
         <button id="withdrawBtn" class="btn btn-danger mt-2">Withdraw Assets</button>
@@ -61,7 +62,19 @@
         </table>
 
     </div>
-    <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>>
+
+
+    <button id="addNetwork">Add Network</button>
+    <div id="dialog" style="display: none;">
+        <label for="networkId">Network ID:</label>
+        <input type="number" id="networkId">
+        <label for="contractAddress">Contract Address:</label>
+        <input type="text" id="contractAddress">
+        <button id="save">Save</button>
+        <button id="cancel">Cancel</button>
+    </div>
+
+    <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>
     <script src="app.js"></script>
 </body>
 
