--- a/webapp-bootstrap/index.html
+++ b/webapp-bootstrap/index.html
@@ -3,21 +3,72 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeFi Strategy Manager</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="app.js"></script>
 </head>
 
 <body>
+    <script>
+        
+    </script>
+
+    <nav>
+        <div class="nav-wrapper">
+            <ul id="nav-mobile" class="right">
+                <li><span class="material-icons">emoji_people</span><span id="networkInfo"></span></li>
+                <li><a href="#"><span id="balanceInfo"></span></a></li>
+                <li><a href="#"><span id="walletInfo"></span></a></li>
+                <li><a href="#" id="connectWalletBtn"><i class="material-icons">account_balance_wallet</i></a></li>
+                <li><a href="#" id="disconnectWalletBtn"><i class="material-icons">logout</i></a></li>
+
+            </ul>
+        </div>
+    </nav>
+
+    <script>
+        const connectWalletButton = $('#connectWalletBtn');
+        const disconnectWalletButton = $('#disconnectWalletBtn');
+
+        async function connect2() {
+            if (window.ethereum) {
+                try {
+                    const provider = await connectWallet();
+                    const signer = provider.getSigner();
+                    const walletAddress = await signer.getAddress();
+                    const network = await provider.getNetwork();
+
+                    $("#walletInfo").text(walletAddress);
+                    $("#networkInfo").text(`${network.chainId}/${network.name}`);
+                    
+                    connectWalletButton.hide();
+                    disconnectWalletButton.show();
+                } catch (error) {
+                    console.error("User denied account access");
+                }
+            } else {
+                console.error('Non-Ethereum browser detected. Consider installing MetaMask!');
+            }
+        }
+
+        connectWalletButton.on('click', connect2);
+
+        disconnectWalletButton.on('click',  async () => {
+            connectWalletButton.show();
+            disconnectWalletButton.hide();
+            $("#walletInfo").text("");
+            $("#networkInfo").text("");
+        });
+
+        connect2();
+    </script>
+
     <div class="container mt-5">
-
-        <h1>ERC4626 DeFi Asset Manager</h1>
-
-        <h3>Wallet</h3>
-        <div>Address: <span id="walletInfo"></span></div>
-        <div>Network: <span id="networkInfo"></span></div>
-        <div>Assets Balance: <span id="balance"></span></div>
-
         <h3>ERC4626 Stake</h3>
         <div>Shares: <span id="shares">0</span></div>
         <div>Total Assets: <span id="assets">0</span></div>
@@ -27,9 +78,6 @@
             <input type="text" id="amountInput" class="form-control">
         </div>
 
-
-        <button id="connectWalletBtn" class="btn btn-info mt-2">Connect Wallet</button>
-        <button id="disconnectWalletBtn" class="btn btn-info mt-2">Disconnect Wallet</button>
         <button id="reinvestBtn" class="btn btn-primary mt-2">Reinvest</button>
         <button id="depositBtn" class="btn btn-success mt-2">Deposit Assets</button>
         <button id="withdrawBtn" class="btn btn-danger mt-2">Withdraw Assets</button>
@@ -43,6 +91,69 @@
         <button id="addVault" class="btn btn-primary mt-2">Add</button>
         <button id="removeVault" class="btn btn-danger mt-2">Remove</button>
     </div>
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-info mt-2" data-toggle="modal" data-target="#dialog">
+        Add Network
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="dialog" tabindex="-1" role="dialog" aria-labelledby="dialogTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="dialogTitle">Add Network</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <table class="table">
+                        <tr>
+                            <td>Network ID:</td>
+                            <td><input type="number" id="networkId" class="form-control"></td>
+                        </tr>
+                        <tr>
+                            <td>Contract Address:</td>
+                            <td><input type="text" id="contractAddress" class="form-control"></td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="save">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const addNetworkButton = $('#addNetwork');
+        const dialog = $('#dialog');
+        const saveButton = $('#save');
+        const cancelButton = $('#cancel');
+        const networkIdInput = $('#networkId');
+        const contractAddressInput = $('#contractAddress');
+
+        saveButton.on('click', () => {
+            const networkId = networkIdInput.val();
+            const contractAddress = contractAddressInput.val();
+
+            let networks = localStorage.getItem('networks');
+            if (networks) {
+                networks = JSON.parse(networks);
+            } else {
+                networks = {};
+            }
+
+            networks[networkId] = contractAddress;
+
+            localStorage.setItem('networks', JSON.stringify(networks));
+
+            dialog.modal('hide');
+        });
+    </script>
+
     <div>
         <table class="table">
             <thead>
@@ -63,19 +174,7 @@
 
     </div>
 
-
-    <button id="addNetwork">Add Network</button>
-    <div id="dialog" style="display: none;">
-        <label for="networkId">Network ID:</label>
-        <input type="number" id="networkId">
-        <label for="contractAddress">Contract Address:</label>
-        <input type="text" id="contractAddress">
-        <button id="save">Save</button>
-        <button id="cancel">Cancel</button>
-    </div>
-
-    <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>
-    <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
