--- a/webapp-bootstrap/index.html
+++ b/webapp-bootstrap/index.html
@@ -233,10 +233,11 @@
                 <tr>
                     <th>Name</th>
                     <th>Symbol</th>
-                    <th>Total Shares</th>
-                    <th>TVL</th>
                     <th>Our Shares</th>
+                    <th>Total Shares</th>
+                    <th>Total Assets locked</th>
                     <th>Holding %</th>
+                    <th>Perfomance Index</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -255,10 +256,11 @@
                 const row = `<tr>
                 <td>${item.name}</td>
                 <td>${item.symbol}</td>
+                <td>${ethers.utils.formatEther(item.vaultOurShares)}</td>
                 <td>${ethers.utils.formatEther(item.vaultTotalShares)}</td>
                 <td>${ethers.utils.formatEther(item.vaultTotalAssets)}</td>
-                <td>${ethers.utils.formatEther(item.vaultOurShares)}</td>
                 <td>${item.holdingPercentage.toFixed(2)}%</td>
+                <td>${item.perfomanceIndex}</td>
                 <td><button id="deleteButton" class="btn btn-danger mt-2"><i class="material-icons">delete</i></button></td>
                 </tr>`;
 
