Add base goerli

--- a/webapp-bootstrap/index.html
+++ b/webapp-bootstrap/index.html
@@ -54,7 +54,7 @@
         <div class="col s6 m3">
             <div class="card">
                 <div class="card-content">
-                    <span class="card-title"><i class="material-icons">account_balance</i>Shares</span>
+                    <span class="card-title"><i class="material-icons">account_balance</i>Owned Shares</span>
                     <span id="shares">0</span></span>
                 </div>
             </div>
@@ -62,7 +62,7 @@
         <div class="col s6 m3">
             <div class="card">
                 <div class="card-content">
-                    <span class="card-title"><i class="material-icons">analytics</i>Invested Assets</span>
+                    <span class="card-title"><i class="material-icons">analytics</i>Owned Assets</span>
                     <span id="investedAssets">0</span></span>
                 </div>
             </div>
@@ -70,7 +70,7 @@
         <div class="col s6 m3">
             <div class="card">
                 <div class="card-content">
-                    <span class="card-title"><i class="material-icons">wallet</i>Wallet Assets</span>
+                    <span class="card-title"><i class="material-icons">wallet</i>My Wallet Assets</span>
                     <span id="walletAssets">0</span></span>
                 </div>
             </div>
@@ -78,7 +78,7 @@
         <div class="col s6 m3">
             <div class="card">
                 <div class="card-content">
-                    <span class="card-title"><i class="material-icons">query_stats</i>Avg. APY</span>
+                    <span class="card-title"><i class="material-icons">query_stats</i>Fund Avg. APY</span>
                     <span id="walletAssets">10%</span></span>
                 </div>
             </div>
